# feegow_agendamentos

./: .env_example  .gitignore  Dockerfile_Feegow  README.md  docker-compose.override.yml  pipeline_feegow_agenda.py  pyproject.toml  requirements_feegow.txt
.astro/: config.yaml
.dlt/: secrets_example.toml
models/explorer/: explore_agendamentos.sql
src/prj_agenda/: source_feegow_agenda.py
